# mycelite

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  devenv.nix  devenv.yaml
.github/workflows/: release.yml  tests.yml
async_journal/: Cargo.toml
async_journal/src/: lib.rs
async_journal/tests/: async_journal_tests.rs
block/: Cargo.toml  README.md
block/src/: lib.rs
block/tests/: block_test.rs
block_macro/: Cargo.toml  README.md
block_macro/src/: lib.rs
examples/: README.md
examples/sync-backend/: Cargo.toml
examples/sync-backend/src/: main.rs
journal/: Cargo.toml  README.md
journal/src/: async_bridge.rs  async_journal.rs  async_wrap.rs  de.rs  error.rs  journal.rs  lib.rs  se.rs  stream.rs
journal/tests/: de_test.rs  journal_tests.rs  se_test.rs
libsqlite-sys/: Cargo.toml  README.md  build.rs  wrapper.h
libsqlite-sys/src/: alloc.rs  ffi.rs  iter.rs  lib.rs  sqlite_value.rs  util.rs  vtab.rs
libsqlite-sys/tests/: allocator_tests.rs
mycelite/: .gitignore  Cargo.toml  README.md
mycelite/src/: config.rs  lib.rs  replicator.rs  vfs.rs
mycelite/src/replicator/: http_replicator.rs  mod.rs  noop_replicator.rs  replicator.rs
page_parser/: Cargo.toml  README.md
page_parser/src/: database.rs  header.rs  lib.rs  page.rs
page_parser/tests/: header_test.rs
serde_sqlite/: Cargo.toml
serde_sqlite/src/: de.rs  error.rs  lib.rs  se.rs
serde_sqlite/tests/: de_test.rs  se_test.rs
utils/: Cargo.toml
utils/src/: lib.rs
