[package]
name = "async_journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block = { path = "../block" }
tokio = { version = "1", features=["full"]}
serde_sqlite = { path = "../serde_sqlite" }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1.66"
chrono = { version = "0.4", default-features=false, features = ["std", "clock"] }
futures = "0.3.27"

[dev-dependencies]
tempfile = "3"
quickcheck = "1"
spin_sleep = "1"
