[package]
name = "journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block = { path = "../block" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4"

[dev-dependencies]
