[package]
name = "journal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block = { path = "../block" }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", default-features=false, features = ["std", "clock"] }
serde_sqlite = { path = "../serde_sqlite" }

[dev-dependencies]
tempfile = "3"
quickcheck = "1"
spin_sleep = "1"
