[package]
name = "libsqlite-sys"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]


[build-dependencies]
bindgen = "0.63"
pkg-config = "0.3"


[dev-dependencies]
quickcheck = "1"
libc = "0.2"
