[package]
name = "mycelite"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
test = false

[features]
default = ["replicator"]
replicator = ["dep:ureq", "dep:base64"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsqlite-sys = { path = "../libsqlite-sys" }
journal = { path = "../journal" }
utils = { path = "../utils" }
page_parser = { path = "../page_parser" }
serde_sqlite = { path = "../serde_sqlite" }
once_cell = "1"

# replicator
ureq = { version = "2.5", optional = true }
base64 = { version = "0.21", optional = true }

# config
toml = "0.7"

